# crayon

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json
.cursor/: environment.json
.cursor/rules/: build-chart-visualisations.mdc  styling-rule.mdc  use-pnpm.mdc
.github/workflows/: build-js.yml  build-py.yml  build.yml  deploy.yml  publish-npm-package.yml  publish-pypi-package.yml
.windsurf/workflows/: build-chart-visualisations.md
docs/: .gitignore  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
docs/components/Steps/: Steps.module.css  Steps.tsx
docs/custom/plugins/: inject-custom-docs.mjs
docs/docs/: 001-what-is-crayon.md  examples.md  examples.mdx  index.md  index.mdx
docs/docs/concepts/: 001-core-concepts.md  001-generative-ui.md  002-chat-provider.md  002-generative-ui.md  003-data-format.md  003-data-format.mdx
docs/docs/guides/: 001-generative-ui.md  001-generative-ui.mdx  001-getting-started.mdx  002-connecting-ai-vercel.md  002-default-text.mdx  002-rendering-markdown.mdx  003-connecting-ai-py-direct.md  004-connecting-thread-backend.md  005-ui-customization.md  006-generative-ui.md  006-getting-started.mdx
docs/docs/quickstart/: 001-python-fastapi.mdx  002-nextjs.mdx
docs/src/components/: Navbar.js  Navbar.module.css  PrimaryButton.js  PrimaryButton.module.css  SecondaryButton.js  SecondaryButton.module.css
docs/src/pages/: globals.css  index.module.css  index.tsx  page.module.css
docs/src/sections/: FAQ.js  FAQ.module.css  FeatureAccordion.js  FeatureAccordion.module.css  Features.js  Features.module.css  Footer.js  Footer.module.css  Hero.js  Hero.module.css
docs/static/: vercel.json
frontend-sdk/: .gitignore  eslint.cjs  eslint.config.cjs  package.json  pnpm-lock.yaml  tsconfig.json
js/: .gitignore  eslint.config.cjs  package-lock.json  package.json  pnpm-lock.yaml
py/: Makefile  pyproject.toml
py/core/: pyproject.toml
py/core/src/crayonai_core/: __init__.py  types.py  utils.py
py/integrations/openai/: pyproject.toml
py/integrations/openai/src/crayonai_openai/: __init__.py  stream_text.py
py/stream/: README.md  pyproject.toml  setup.py
py/stream/src/crayonai_stream/: __init__.py  crayon_message.py  openai_helper.py  protocol.py  stream.py
py/stream/tests/: test_best_effort_json_parser.py
(+179 files in other folders)
