[tool.poetry]
name = "crayonai-core"
version = "0.0.1"
description = "Core package with type definitions"
authors = ["Thesys Inc. <engineering@thesys.dev>"]
license = "MIT"
packages = [
  { include = "crayonai_core", from = "src" }
]
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
