[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crayonai_stream"
version = "0.6.0"
description = "Streaming utilities for CrayonAI"
authors = ["Thesys Inc. <engineering@thesys.dev>"]
readme = "README.md"
license = "MIT"
packages = [{include = "crayonai_stream", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
pydantic = ">=2.0.0"
typing-extensions = ">=4.0.0"
types-setuptools = "^76.0.0.20250313"


[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3
