[tool.poetry]
name = "crayonai_integrations_openai"
version = "0.0.1"
description = "OpenAI client integration for CrayonAI"
authors = ["Thesys Inc. <engineering@thesys.dev>"]
license = "MIT"
packages = [
  { include = "crayonai_openai", from = "src" }
]
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
crayonai-core = { path = "../../core", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
